@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.932 2009/07/16 16:14:19 ub Exp $
+# $Id: CHANGES,v 1.933 2009/07/17 15:51:22 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,10 @@
 # --
 
 2.4.0 beta6 (2009/07/??)
+ - (2009/07/16) Fixed bug#4001 - proxy usage - rss get's not loaded via
+    proxy settings.
+ - (2009/07/16) Updated Russian translation, thanks to Egor Tsilenko!
+ - (2009/07/16) Fixed bug#3994 - It's possible to create an email ticket
  - (2009/07/16) Fixed bug# 3997 - Wrong named variable in AgentTicketZoom.
  - (2009/07/16) Fixed bug# 3993 - Error message about wrong email adress
     not visible in AgentTicketPhone and AgentTicketEmail if AutoComplete
